--- a/client/src/components/eventsList.scss
+++ b/client/src/components/eventsList.scss
@@ -45,7 +45,8 @@
 .img-size {
   width:222px;
   height:125px;//160px
-  position: relative;
+  //position: relative;
+  object-fit: cover;
   
 }
 
