--- a/client/src/components/groupsFilter.scss
+++ b/client/src/components/groupsFilter.scss
@@ -3,7 +3,7 @@
   padding-top: 20px;
   
   h4 {
-    margin-left: 20px;
+    //margin-left: 20px;
     color: #687177;
   }
 }
@@ -24,6 +24,6 @@
  
 }
 
-.group-title-div{
-  margin-left: auto;
-}
+// .group-title-div{
+//   margin-left: auto;
+// }
