--- a/client/src/components/groupsList.scss
+++ b/client/src/components/groupsList.scss
@@ -10,7 +10,7 @@
 }
 
 .margin-grouplist{
-  margin-right: 50px;
+  //margin-right: 50px;
   margin-top: 30px;
   font-weight: bold;
   
