--- a/client/src/components/postForm.scss
+++ b/client/src/components/postForm.scss
@@ -1,20 +1,23 @@
 .share {
-  max-width:800px;
+  width:100%;
   
   height: 170px;
-
-  margin-left: 40px;
-  margin-right: 15px;
-  box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
-  -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
-  border-radius: 10px;
-
+  margin-left:22px;
 
 }
 
 .shareWrapper {
-  padding: 10px;
   
+  padding: 10px;
+  min-width:500px;
+  max-width: 800px;
+  box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
+  -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
+  border-radius: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  
+
  
 }
 
