--- a/client/src/components/updateEventList.scss
+++ b/client/src/components/updateEventList.scss
@@ -1,6 +1,6 @@
-// .upcoming-container {
-//   max-width: 400px;
-// }
+.upcoming-container {
+  width: 100%;
+}
   
 
 .table-custom-color {
